source/css/gtb.css
/* ... */
.zoek-formulier{
 }

.formuliertitel{
    font-weight: bold;
    font-size: larger;
}

.formulierregel {
    margin-bottom: 8px;
}

.formulierlabel{
    margin-bottom: 3px;
}

.formulierinput {
    
}

.formulierinput .form-control[type=text] {
    height: 30px;
    padding: 4px 8px;
}

.formulierinput .btn {
    padding: 4px 10px;
}

.helpregel {
    margin-top: 35px;
}

.gtb-disabled{
    opacity: 0.5;
    cursor: wait;
}

.gtb-wait{
    z-index: 2000;
    position: absolute;
    /*  De percentages zijn een grove benadering. */
    background-color: transparent;
    top: 45%;
    left: 45%;
}

.gtb-waiticon:before{
    font-family: "Glyphicons Halflings";
    content: "";
}

.gtb-waiticon{
    animation-name: tolletje;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-delay: 0s;
    animation-direction:normal;
    animation-iteration-count:infinite;
    animation-play-state: running;
    
    display: inline-block;
    font-style: normal;
    font-weight: 400;
    line-height: 1;
    position: relative;
    top: 1px;
}

@keyframes tolletje {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.gtb-tekstveld, .gtb-selectveld{
    font-family: Verdana, sans-serif, gtb;
}

.gtb-woordsoortveld{
    width: 75%;
    display: inline;
}

div.speciaalteken {
    margin: 10px 0px 20px 0px;
}

table.speciaalteken,
td.speciaalteken{
    font-family: Verdana, sans-serif, gtb;
}

table.speciaalteken {
    table-layout: fixed; 
    width: 100%;
    background-color: rgba(255,255,255,0.7);
}

td.speciaalteken{
    width: 1px; /* arbitrair, is meer een soort noemer over de deler van het totaal aantal width in de rij voor fixed layout tables */
    padding: 3px;
    text-align: center;
    cursor: pointer;
    /* bootstrap inputs nadoen */
    border: 1px solid #CCC!important; /*  bootstrap override het een en ander */
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
}

td.speciaalteken:hover{
    background-color: #EEE;
}

td.speciaalteken:active{
    background-color: #DDD;
    box-shadow: inset 0px 1px 6px -1px rgba(0,0,0,0.3);
}

.gtb-expanded,
.gtb-collapsed {
    position:relative;
    font-weight: bolder;
}

.gtb-collapsed:before{
    content: '▶';
    position: absolute;
    left: -15px;
}

.gtb-expanded:before{
    content: '▼';
    position: absolute;
    left: -15px;
}

.gtbcheckbox, .gtbradio{
}

#resultaathouder {
    background-color: rgba(255,255,255,0.8);
}

.gtb-resultaatknoppen {
   margin-top: 1em;
   margin-bottom: 1em; 
}

.gtb-zoek-button {
}

/* We gebruiken een eigen class in plaats van die van Bootstrap om te zorgen dat we beide namen kunnen gebruiken zonder eventuele gekoppelde GTB-logica in XSLT of Javascript te verstoren.  */
.gtb-hidden{
    display: none;
}

.gtb-inspring {
    padding-left: 15px;
}

/*input[type=checkbox]:before, .gtbcheckbox:before {
    content: "[";
    display: inline;
    color:red;
}
input[type=checkbox]:after, .gtbcheckbox:after {
    content: "]";
    display: inline;
    color:red;
}*/

.woordsoorttable{
    margin-left: 2em;
    padding-left: 1em;
    padding-right: 1em;
    border-style: dotted;
    border-width: 1px;
    width: 80%;
}

.gtb-xml-error{
    background-color: yellow;
    font-family:monospace;
    font-size: smaller;
}

.gtb-statcount{
    font-weight: bold;
}

.gtb-wdbcol-line{
    width: 5%;
}
.gtb-wdbcol-wdb{
    width: 10%;
}
.gtb-wdbcol-modern_lemma{
    width: 15%;
}
.gtb-wdbcol-lemma{
    width: 15%;
}
.gtb-wdbcol-woordsoort{
    width: 15%;
}
.gtb-wdbcol-auteur{
    width: 15%;
}
.gtb-wdbcol-titel{
    width: 50%;
}
.gtb-wdbcol-datering{
    width: 10%;
}
.gtb-wdbcol-lokalisering{
    width: 10%;
}
.gtb-wdbcol-anders{
    /*  rest */
}

div.gtb-results{
    font-family: Verdana, sans-serif, gtb;
    max-height: 70vh;
    overflow-y: auto;
    margin-bottom: 35px;
}

div.gtb-results i{
    font-family: Verdana, sans-serif, gtbi;
}

div.gtb-results b{
    font-family: Verdana, sans-serif, gtbb;
}

div.gtb-results i b,
div.gtb-results b i{
    font-family: Verdana, sans-serif, gtbbi;
}

td.conc {
}
.gtb-conc-line {
    white-space: nowrap;
    clear: both;
}
.gtb-conc-voor {
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    direction: rtl;
    width: 15em;
    vertical-align: top;
}

.gtb-conc-zoekwoord {
    font-weight: bold;
    vertical-align: top;
    display: inline-block;
}

.gtb-conc-na {
    overflow: hidden;
    text-overflow: ellipsis;
    width: 15em;
    display: inline-block;
    vertical-align: top;
}

div.gtb-zoekvragen-geschiedenis {
    min-height: 40vh;
    max-height: 40vh;
    overflow:auto;
}

.gtb-zoekvraag-description{
    font-size: smaller;
}


.gtb-input-value {
    font-weight: bold;
}

#gtb-result-table thead {
    display: block;
}

#gtb-result-table tbody {
    display: block;
    min-height: 40vh;
    max-height: 40vh;
    overflow:auto;    
}

#gtb-result-table th {
    text-align: left;
}

tr.gtb-result-row > td{
    height: 3em;
    vertical-align: top;
}

tr.gtb-result-row{
    /* cursor: pointer; */
}

div.gtb-cell-small {
    height: 3em;
    max-height: 3em;
    overflow-y:auto;
    cursor: pointer;
}

div.gtb-cell-large {
    min-height: 3em;
    cursor: pointer;
}

.gtb-wdb-onw{
    color: orange;
}

.gtb-wdb-vmnw{
    color: red;
}

.gtb-wdb-mnw{
    color: green;
}

.gtb-wdb-wnt{
    color: brown;
}

.gtb-wdb-wft{
    color: blue;
}

.gtb-homoniemnr{
    vertical-align: super;
    font-size: 80%;
}

.gtb-pagineringsknoppen{
    float: right;
}
.resultaatknop {
    margin-top: 1.5em;
}

/*  Verberg de resultaatknoppen in de auxiliaries-sectie, maar toon ze wanneer ze worden opgeroepen in de content. */
.auxiliaries > .gtb-resultaatknoppen {
    display: none;
}

.gtb-typeahead-word {
    font-weight: bold;
}

.gtb-typeahead-wdb {
    font-style: italic;
    padding-left: 4em;
    float: right;
}
/* ... */

